--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -121,7 +121,7 @@
                                                                         <div class="col-md-6 col-lg-4">
                                                                             <div class="demo-one__card">
                                                                                 <div class="demo-one__image">
-                                                                                    <img width="370" height="431" src="assets/images/home-showcase/home-1-4.png"
+                                                                                    <img width="370" height="431" src="{% static 'website/' %}assets/images/home-showcase/home-1-4.png"
                                                                                         alt="Home page 04">
                                                                                     <div class="demo-one__btns">
                                                                                         <a href="index4.html" class="thm-btn">Multi Page </a>
@@ -140,7 +140,7 @@
                                                                         <div class="col-md-6 col-lg-4">
                                                                             <div class="demo-one__card">
                                                                                 <div class="demo-one__image">
-                                                                                    <img width="370" height="431" src="assets/images/home-showcase/home-1-5.png"
+                                                                                    <img width="370" height="431" src="{% static 'website/' %}assets/images/home-showcase/home-1-5.png"
                                                                                         alt="Home page 05">
                                                                                     <div class="demo-one__btns">
                                                                                         <a href="index5.html" class="thm-btn">Multi Page </a>
@@ -159,7 +159,7 @@
                                                                         <div class="col-md-6 col-lg-4">
                                                                             <div class="demo-one__card">
                                                                                 <div class="demo-one__image">
-                                                                                    <img width="370" height="431" src="assets/images/home-showcase/home-1-1.png"
+                                                                                    <img width="370" height="431" src="{% static 'website/' %}assets/images/home-showcase/home-1-1.png"
                                                                                         alt="Home Page 01">
                                                                                     <div class="demo-one__btns">
                                                                                         <a href="index.html" class="thm-btn">Multi Page </a>
@@ -177,7 +177,7 @@
                                                                         <div class="col-md-6 col-lg-4">
                                                                             <div class="demo-one__card">
                                                                                 <div class="demo-one__image">
-                                                                                    <img width="370" height="431" src="assets/images/home-showcase/home-1-2.png"
+                                                                                    <img width="370" height="431" src="{% static 'website/' %}assets/images/home-showcase/home-1-2.png"
                                                                                         alt="Home Page 02">
                                                                                     <div class="demo-one__btns">
                                                                                         <a href="index2.html" class="thm-btn">Multi Page </a>
@@ -196,7 +196,7 @@
                                                                         <div class="col-md-6 col-lg-4">
                                                                             <div class="demo-one__card">
                                                                                 <div class="demo-one__image">
-                                                                                    <img width="370" height="431" src="assets/images/home-showcase/home-1-3.png"
+                                                                                    <img width="370" height="431" src="{% static 'website/' %}assets/images/home-showcase/home-1-3.png"
                                                                                         alt="Home page 03">
                                                                                     <div class="demo-one__btns">
                                                                                         <a href="index3.html" class="thm-btn">Multi Page </a>
@@ -215,7 +215,7 @@
                                                                         <div class="col-md-6 col-lg-4">
                                                                             <div class="demo-one__card">
                                                                                 <div class="demo-one__image">
-                                                                                    <img width="370" height="431" src="assets/images/home-showcase/home-boxed.png"
+                                                                                    <img width="370" height="431" src="{% static 'website/' %}assets/images/home-showcase/home-boxed.png"
                                                                                         alt="Home Boxed">
                                                                                     <div class="demo-one__btns">
                                                                                         <a href="index-boxed.html" class="thm-btn">View
@@ -232,7 +232,7 @@
                                                                         <div class="col-md-6 col-lg-4">
                                                                             <div class="demo-one__card">
                                                                                 <div class="demo-one__image">
-                                                                                    <img width="370" height="431" src="assets/images/home-showcase/home-rtl.png"
+                                                                                    <img width="370" height="431" src="{% static 'website/' %}assets/images/home-showcase/home-rtl.png"
                                                                                         alt="Home RTL">
                                                                                     <div class="demo-one__btns">
                                                                                         <a href="index-rtl.html#googtrans(en%7car)" class="thm-btn">View Page</a>
